Fixes textcolor in dark modes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,13 +58,18 @@ markdown {
 
 .oldtypo {
   &-h2 {
-   color: var(--on-surface) !important;
+    color: var(--on-surface) !important;
     font-size: 24px !important;
   }
 
   &-h3 {
     color: var(--on-surface) !important;
     font-size: 18px !important;
+  }
+
+  &-p {
+    color: var(--on-surface);
+    hyphens: auto;
   }
 }
 
